beatlocker-server/tests/snapshots/integration__getArtists.json.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 95
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "artists": {
      "index": [
        {
          "artist": [
            {
              "albumCount": 1,
              "id": "c2042f2f-fbda-64e4-ff33-62bad6853d99",
              "name": "Alex Gopher"
            }
          ],
          "name": "A"
        },
        {
          "artist": [
            {
              "albumCount": 1,
              "id": "d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf",
              "name": "Richard Bona"
            }
          ],
          "name": "R"
        },
        {
          "artist": [
            {
              "albumCount": 0,
              "id": "a597d760-ecda-330c-8e48-b8a92ba19a25",
              "name": "Unknown Artist"
            }
          ],
          "name": "U"
        }
      ]
    },
    "ignoredArticles": "The El La Los Las Le Les Os As O A",
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
