beatlocker-server/tests/snapshots/integration__getArtists.xml.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 98
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <artists ignoredArticles="The El La Los Las Le Les Os As O A">
    <index name="A">
      <artist id="c2042f2f-fbda-64e4-ff33-62bad6853d99" name="Alex Gopher" albumCount="1"/>
    </index>
    <index name="R">
      <artist id="d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf" name="Richard Bona" albumCount="1"/>
    </index>
    <index name="U">
      <artist id="a597d760-ecda-330c-8e48-b8a92ba19a25" name="Unknown Artist" albumCount="0"/>
    </index>
  </artists>
</subsonic-response>
