beatlocker-server/tests/snapshots/integration__getIndexes.xml.snap
---
source: beatlocker-server/tests/integration.rs
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <indexes ignoredArticles="The El La Los Las Le Les Os As O A">
    <index name="M">
      <artist id="68f8b71b-d9b4-c77e-c7f1-e4af263bcd93" name="Motorway OST" albumCount="1"/>
    </index>
    <index name="R">
      <artist id="75a22ef8-9597-4c55-9be1-097d94babc31" name="Richard Bona" albumCount="1"/>
    </index>
    <index name="U">
      <artist id="de32d996-8297-d3a7-16be-4ff938ff212e" name="Unknown" albumCount="1"/>
    </index>
  </indexes>
</subsonic-response>
