beatlocker-server/tests/snapshots/integration__getLicense.xml.snap
---
source: beatlocker-server/tests/integration.rs
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <license valid="true"/>
</subsonic-response>
