beatlocker-server/tests/snapshots/integration__getMusicDirectory.json.snap
---
source: beatlocker-server/tests/integration.rs
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "directory": {
      "child": [
        {
          "created": "2020-02-02T00:00:00Z",
          "id": "694a6eee-8eac-2a60-af58-e96493edafcb",
          "isDir": true,
          "isVideo": false,
          "name": "MotorwayNested",
          "parent": "9600e0e0-145e-644d-d38f-e501a6252d79",
          "title": "MotorwayNested"
        },
        {
          "album": "Motorway (Original Motion Picture Soundtrack)",
          "albumId": "832e44af-9d23-c38e-34af-b7f4cf92b096",
          "artist": "Alex Gopher",
          "artistId": "be74adf7-0dfc-e5c6-e19e-0058776e90d1",
          "bitRate": 160,
          "contentType": "audio/ogg",
          "created": "2020-02-02T00:00:00Z",
          "discNumber": 1,
          "duration": 6,
          "genre": "Unknown genre",
          "id": "7b2abff8-3571-99f6-b224-56250315eb14",
          "isDir": false,
          "isVideo": false,
          "parent": "9600e0e0-145e-644d-d38f-e501a6252d79",
          "size": 105424,
          "suffix": "ogg",
          "title": "Diamond Dealers",
          "track": 1,
          "year": 2021
        }
      ],
      "id": "9600e0e0-145e-644d-d38f-e501a6252d79",
      "name": "Motorway OST"
    },
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
