beatlocker-server/tests/snapshots/integration__getMusicDirectory.xml.snap
---
source: beatlocker-server/tests/integration.rs
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <directory id="68f8b71b-d9b4-c77e-c7f1-e4af263bcd93" name="Motorway OST">
    <child id="7bb81eaa-b6a7-7f1d-7624-622193088eb6" parent="68f8b71b-d9b4-c77e-c7f1-e4af263bcd93" isDir="true" title="MotorwayNested" name="MotorwayNested" created="2020-02-02T00:00:00Z" isVideo="false"/>
    <child id="7b2abff8-3571-99f6-b224-56250315eb14" parent="68f8b71b-d9b4-c77e-c7f1-e4af263bcd93" isDir="false" created="2020-02-02T00:00:00Z" title="Diamond Dealers" album="Motorway (Original Motion Picture Soundtrack)" artist="Alex Gopher" track="1" year="2021" size="105424" contentType="audio/ogg" suffix="ogg" duration="6" discNumber="1" albumId="20d02390-2687-c407-2d28-d74f9fc6d5a1" artistId="c2042f2f-fbda-64e4-ff33-62bad6853d99" isVideo="false" genre="Unknown genre"/>
  </directory>
</subsonic-response>
