beatlocker-server/tests/snapshots/integration__getMusicFolders.json.snap
---
source: beatlocker-server/tests/integration.rs
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "musicFolders": {
      "musicFolder": [
        {
          "id": "00000000-0000-0000-0000-000000000000",
          "name": "Music"
        }
      ]
    },
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
